// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DuotoneImageComponent renders additional attributes correctly 1`] = `
<img
  alt="GitHub Avatar"
  height="56"
  src=""
  width="56"
/>
`;

exports[`DuotoneImageComponent renders the image correctly 1`] = `
<img
  src=""
/>
`;
